[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pykatex"
version = "0.0.7"
description = "A Python wrapper for the [KaTeX](https://katex.org/) library, providing fast server-side rendering of mathematical expressions."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Ruben van Nieuwpoort", email = "ruben@vannieuwpoort.dev"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
